--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.ipynb_checkpoints
-**/.ipynb_checkpoints
-**/.DS_Store
+*.ipynb_checkpoints
+**/*.ipynb_checkpoints
+**/*.DS_Store
 .DS_Store
 __pycache__/
 **/__pycache__/
-.pdf
+*.pdf
